--- a/src/app/components/widgets/widget-weather/widget-weather.component.scss
+++ b/src/app/components/widgets/widget-weather/widget-weather.component.scss
@@ -82,7 +82,7 @@ $numComet: 10;
 
 .info-container {
     width: 85%;
-    height: 70%;
+    height: 80%;
     background: rgba(255, 255, 255, 0.2);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -97,19 +97,28 @@ $numComet: 10;
     z-index: 3;
 }
 
-.left {
-    width: 30%;
-    height: 50%;
+.top {
+    width: 100%;
+    height: 28%;
     position: relative;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
+    justify-content: space-between;
+}
+
+.top > * {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-width: 160px;
 }
 
 .bottom {
     width: 100%;
-    height: 50%;
+    height: 70%;
 }
 
 .temperature {
@@ -169,3 +178,111 @@ $numComet: 10;
   .stars3 {
     @include star-template($numStarThreeStars, 3px, $starThreeScrollDuration);
   }
+
+
+  //MOON
+  .moon::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 50%; /* Adjust position for different phases */
+    width: 100%;
+    height: 100%;
+    background-color: linear-gradient(to bottom, #1a1627 0%, hsl(247, 47%, 25%) 100%);
+    border-radius: 50%;
+    transform: translateX(-50%); /* Center the dark mask */
+    z-index: 1;
+}
+
+  .full-moon .moon::before {
+    display: none; /* No mask needed */
+}
+
+/* New Moon */
+.new-moon .moon::before {
+    left: 0;
+    width: 100%;
+    background-color: #000;
+}
+
+/* First Quarter */
+.first-quarter .moon::before {
+    left: 50%;
+    background-color: #000;
+}
+
+/* Last Quarter */
+.last-quarter .moon::before {
+    left: 0;
+    background-color: #000;
+    transform: translateX(0);
+}
+
+/* Waxing Crescent */
+.waxing-crescent .moon::before {
+    left: 30%;
+    width: 80%;
+    background-color: #000;
+}
+
+/* Waning Crescent */
+.waning-crescent .moon::before {
+    left: 0;
+    width: 80%;
+    background-color: #000;
+    transform: translateX(20%);
+}
+
+/* Waxing Gibbous */
+.waxing-gibbous .moon::before {
+    left: 70%;
+    width: 80%;
+    background-color: #000;
+    transform: translateX(-70%);
+}
+
+/* Waning Gibbous */
+.waning-gibbous .moon::before {
+    left: 0;
+    width: 80%;
+    background-color: #000;
+    transform: translateX(20%);
+}
+
+.chart-container {
+  position: relative;
+  height: 50%;
+}
+
+.daily-container {
+  margin-top: 5px;
+  font-size: 12px;
+  display: flex;
+  width: 100%;
+  height: 50%;
+  justify-content: space-around;
+}
+
+.daily {
+  gap: 1;
+  min-width: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.daily.day {
+  height: 20%;
+}
+
+.daily.icon {
+  height: 60%;
+}
+
+.daily.minmax {
+  height: 20%;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
