feature weather widget

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -24,7 +24,7 @@
 
 
         <div class="widget-content">
-            <app-widget-wrapper [widget]="widget"></app-widget-wrapper>
+            <app-widget-wrapper [widget]="widget.name"></app-widget-wrapper>
         </div>
     </div>
     }
