--- a/src/app/components/widgets/widget-weather/widget-weather.component.scss
+++ b/src/app/components/widgets/widget-weather/widget-weather.component.scss
@@ -8,9 +8,7 @@ $starThreeScrollDuration: 1000s;
 $numStarOneStars: 1000;
 $numStarTwoStars: 600;
 $numStarThreeStars: 100;
-$numComet: 10;
 
-/* Realistic Day and Night Background */
 .container {
     height: 100%;
     width: 100%;
@@ -19,6 +17,17 @@ $numComet: 10;
     display: flex;
     justify-content: center;
     align-content: center;
+    overflow: hidden;
+}
+
+.zzz {
+  justify-content: flex-start;
+}
+
+.abss {
+  position: absolute !important;
+  left: 8%;
+  bottom: 13%;
 }
 
 .day-sky {
@@ -26,7 +35,11 @@ $numComet: 10;
 }
 
 .night-sky {
-    background: #87CEEB; /* Light blue sky background */
+    background: #87CEEB; 
+}
+
+.rain-day {
+  background-image: linear-gradient(to bottom, #030420, #000000 70%);
 }
 
 .clouds {
@@ -86,7 +99,7 @@ $numComet: 10;
     background: rgba(255, 255, 255, 0.2);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(2px);
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.3);
     position: relative;
@@ -95,6 +108,11 @@ $numComet: 10;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 400;
     z-index: 3;
+    display: flex;
+    flex-direction: column;
+
+    container-name: info;
+    container-type: inline-size;
 }
 
 .top {
@@ -105,7 +123,7 @@ $numComet: 10;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .top > * {
@@ -113,7 +131,7 @@ $numComet: 10;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-width: 160px;
+  font-size: 12px;
 }
 
 .bottom {
@@ -122,8 +140,12 @@ $numComet: 10;
 }
 
 .temperature {
-    font-size: 3rem;
-    font-weight: bold;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+.date {
+  font-size: 10px;
 }
 
 @keyframes glow {
@@ -179,76 +201,6 @@ $numComet: 10;
     @include star-template($numStarThreeStars, 3px, $starThreeScrollDuration);
   }
 
-
-  //MOON
-  .moon::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 50%; /* Adjust position for different phases */
-    width: 100%;
-    height: 100%;
-    background-color: linear-gradient(to bottom, #1a1627 0%, hsl(247, 47%, 25%) 100%);
-    border-radius: 50%;
-    transform: translateX(-50%); /* Center the dark mask */
-    z-index: 1;
-}
-
-  .full-moon .moon::before {
-    display: none; /* No mask needed */
-}
-
-/* New Moon */
-.new-moon .moon::before {
-    left: 0;
-    width: 100%;
-    background-color: #000;
-}
-
-/* First Quarter */
-.first-quarter .moon::before {
-    left: 50%;
-    background-color: #000;
-}
-
-/* Last Quarter */
-.last-quarter .moon::before {
-    left: 0;
-    background-color: #000;
-    transform: translateX(0);
-}
-
-/* Waxing Crescent */
-.waxing-crescent .moon::before {
-    left: 30%;
-    width: 80%;
-    background-color: #000;
-}
-
-/* Waning Crescent */
-.waning-crescent .moon::before {
-    left: 0;
-    width: 80%;
-    background-color: #000;
-    transform: translateX(20%);
-}
-
-/* Waxing Gibbous */
-.waxing-gibbous .moon::before {
-    left: 70%;
-    width: 80%;
-    background-color: #000;
-    transform: translateX(-70%);
-}
-
-/* Waning Gibbous */
-.waning-gibbous .moon::before {
-    left: 0;
-    width: 80%;
-    background-color: #000;
-    transform: translateX(20%);
-}
-
 .chart-container {
   position: relative;
   height: 50%;
@@ -258,18 +210,16 @@ $numComet: 10;
   margin-top: 5px;
   font-size: 12px;
   display: flex;
-  width: 100%;
   height: 50%;
   justify-content: space-around;
 }
 
 .daily {
-  gap: 1;
-  min-width: 60px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-size: 10px;
 }
 
 .daily.day {
@@ -285,4 +235,61 @@ $numComet: 10;
   display: flex;
   width: 100%;
   justify-content: space-between;
+}
+
+.icon {
+  width: 100%;
+  height: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+img {
+  width: 100%;
+  height: 80%;
+}
+
+@container info (min-width: 450px) {
+
+  div > * {
+    font-size: 12px;
+  }
+  
+  div.temperature {
+    font-size: 3rem;
+  }
+
+  div.daily {
+    font-size: 12px;
+  }
+}
+
+.loader-container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background: #ddd;
+backdrop-filter: blur(5px);
+}
+
+.loader {
+    height: 50px;
+    aspect-ratio: 1;
+    background-color: #8d847f;
+    border-radius: 50%;
+    animation: l4 3s infinite;
+    position: absolute;
+    top: 40%;
+    left:50%;
+    z-index: 100;
+}
+@keyframes l4 {
+  12.5% {background-image:radial-gradient(80% 65% at left, #0000 94%,#fff9)}
+  25%   {background-image:linear-gradient(90deg,#0000 50%,#fff9 0)}
+  37.5% {background-image:radial-gradient(80% 65% at right,#fff9 94%,#0000)}
+  50%   {background-image:linear-gradient(#fff9 0 0)}
+  62.5% {background-image:radial-gradient(80% 65% at left, #fff9 94%,#0000)}
+  75%   {background-image:linear-gradient(-90deg,#0000 50%,#fff9 0)}
+  87.5% {background-image:radial-gradient(80% 65% at right,#0000 94%,#fff9)}
 }
