fix widget resizing

--- a/src/app/components/widgets/widget-weather/widget-weather.component.scss
+++ b/src/app/components/widgets/widget-weather/widget-weather.component.scss
@@ -20,6 +20,10 @@ $numStarThreeStars: 100;
     overflow: hidden;
 }
 
+.white {
+  color:white !important;
+}
+
 .zzz {
   justify-content: flex-start;
 }
