--- a/src/app/widgets-list/widgets-list.component.html
+++ b/src/app/widgets-list/widgets-list.component.html
@@ -4,7 +4,7 @@
         @for(widget of widgets; track widget) {
         <div class="widget" cdkDrag (cdkDragStarted)="onDragStart($event)" (cdkDragEnded)="onDragEnd($event)">
             {{widget.name}}
-            <div *cdkDragPreview style="width: 300px; height: 300px">
+            <div *cdkDragPreview style="width: 300px; height: 300px; overflow: hidden">
                 <ng-container *ngComponentOutlet="widget.component" /> `
             </div>
         </div>
