--- a/src/app/components/widgets/widget-weather/widget-weather.component.html
+++ b/src/app/components/widgets/widget-weather/widget-weather.component.html
@@ -42,7 +42,7 @@
         </div>
         <div class="bottom">
             <div class="chart-container">
-                <canvas id="canvas"></canvas>
+                <canvas id="{{canvasId}}"></canvas>
             </div>
             <div class="daily-container">
                 @for( day of dailyTempretures; track day) {
