--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -1,10 +1,11 @@
 .dashboard {
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-wrap: wrap;
     padding: 10px;
     box-sizing: border-box;
     align-content: flex-start;
+    background: #dddddd;
 }
 
 .drag-handle {
@@ -15,8 +16,8 @@
 }
 
 .widget {
-    min-width: 460px;
-    min-height: 320px;
+    min-width: 350px;
+    min-height: 260px;
     display: flex;
     flex-direction: column;
     overflow: hidden;
