--- a/src/app/components/widgets/widget-weather/widget-weather.component.scss
+++ b/src/app/components/widgets/widget-weather/widget-weather.component.scss
@@ -117,6 +117,8 @@ $numStarThreeStars: 100;
 
     container-name: info;
     container-type: inline-size;
+
+    padding: 10px;
 }
 
 .top {
@@ -127,7 +129,7 @@ $numStarThreeStars: 100;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    justify-content: space-around;
+    gap: 120px;
 }
 
 .top > * {
@@ -254,18 +256,57 @@ img {
   height: 80%;
 }
 
+
+
 @container info (min-width: 450px) {
+  
+.top {
+  gap: 150px;
+}
 
   div > * {
     font-size: 12px;
   }
   
   div.temperature {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
 
   div.daily {
     font-size: 12px;
+  }
+}
+
+
+@container info (min-width: 650px) {
+  .top {
+    gap: 400px;
+  }
+}
+
+@container info (width < 350px) {
+  .bottom {
+    display: none
+  }
+
+  .top {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-around;
+    gap: 10px;
+  }
+
+  div > * {
+    font-size: 18px;
+  }
+  
+  div.temperature {
+    font-size: 3.5rem;
+  }
+
+  div.daily {
+    font-size: 18px;
   }
 }
 
@@ -274,7 +315,7 @@ img {
   height: 100%;
   position: relative;
   background: #ddd;
-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
 }
 
 .loader {
@@ -285,7 +326,7 @@ backdrop-filter: blur(5px);
     animation: l4 3s infinite;
     position: absolute;
     top: 40%;
-    left:50%;
+    left:45%;
     z-index: 100;
 }
 @keyframes l4 {
