--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,3 +1,13 @@
-<div class="container">
-    <button>add widget</button>
+<button mat-mini-fab aria-label="" class="menu-button" (click)="menuToggle()">
+    <mat-icon>menu</mat-icon>
+</button>
+<div class="quarter-circle" #menu>
+    <div class="circle-buttons">
+        <button mat-mini-fab (click)="addWidget()">
+            <mat-icon>add_circle</mat-icon>
+        </button>
+        <button>B</button>
+        <button>C</button>
+        <button>D</button>
+    </div>
 </div>
