--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,6 +1,61 @@
-.container {
-    display: flex;
-    align-items: center;
-    min-height: 50px;
+.quarter-circle {
+    width: 150px;
+    height: 150px;
+    position: fixed;
     top: 0;
+    right: 0;
+    border-bottom-left-radius: 150px;
+    transform: scale(0);
+    transform-origin: top right;
+    transition: transform 300ms ease-in-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.3);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
 }
+
+.expand {
+    transform: scale(1.5);
+}
+
+/* Circular button container */
+.circle-buttons {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+/* Button styling */
+.circle-buttons button {
+    width: fit-content;
+    height: fit-content;
+    cursor: pointer;
+    position: absolute;
+    background-color: transparent; 
+    border: none;
+}
+
+.menu-button {
+    position: fixed;
+    top: 4%;
+    left: 95%;
+    z-index: 1;
+}
+
+/* Position buttons dynamically along the arc */
+.circle-buttons button:nth-child(1) {     top: 7%;
+    right: 70%; }
+.circle-buttons button:nth-child(2) {     top: 39%;
+    right: 62%; }
+.circle-buttons button:nth-child(3) {     top: 65%;
+    right: 40%; }
+.circle-buttons button:nth-child(4) {         top: 80%;
+    right: 10%; }
