--- a/src/app/widgets-list/widgets-list.component.scss
+++ b/src/app/widgets-list/widgets-list.component.scss
@@ -1,29 +1,29 @@
 .container {
-    width: 140px;
-    height: 90vh;
+    width: 100%;
+    bottom: 0;
+    left: 0;
     position: fixed;
+    height: 22vh;
 }
 
 .widget {
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: bold;
-    font-size: 16px;
-    font-family: 'Courier New', Courier, monospace;
+    height: 160px;
+    transform: scale(0.7);
+    width: 300px;
     cursor: grab;
-
     background: #f9f9f9;
     border: 1px solid #ddd;
-    border-radius: 8px;
+    border-radius: 12px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
 
 .list {
     display: flex;
-    flex-direction: column;
+    width: 100%;
     gap: 20px;
-    padding: 20px;
-    height: 100%;
+    background: rgba(255, 255, 255, 0.01);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
 }
