--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -16,6 +16,7 @@
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.3);
+    z-index: 100;
 }
 
 .expand {
@@ -45,9 +46,15 @@
 
 .menu-button {
     position: fixed;
-    top: 4%;
+    top: 2%;
     left: 95%;
-    z-index: 1;
+    z-index: 101;
+    opacity: 0.5;
+    cursor: pointer;
+}
+
+.menu-button:hover {
+    opacity: 1;
 }
 
 /* Position buttons dynamically along the arc */
