--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,10 @@
 <div class="container">
   <mat-tab-group>
   <mat-tab label="First"> 
-    <app-dashboard></app-dashboard>
+    <app-dashboard dashboardId="1"></app-dashboard>
   </mat-tab>
   <mat-tab label="Second">
-    <app-dashboard></app-dashboard>
+    <app-dashboard dashboardId="2"></app-dashboard>
   </mat-tab>
 </mat-tab-group>
   @if( editMode() ) {
