disable edit mode on widget-menu exit

--- a/src/app/widgets-list/widgets-list.component.html
+++ b/src/app/widgets-list/widgets-list.component.html
@@ -1,4 +1,5 @@
 <div class="container border">
+    <mat-icon class="close-button" (click)="close()">close</mat-icon>
     <div cdkDropList [cdkDropListData]="widgets" id="widget-list" [cdkDropListConnectedTo]="['dashboard-1', 'dashboard-2']"
         cdkDropListSortingDisabled class="list">
         @for(widget of widgets; track widget) {
