--- a/src/app/widgets-list/widgets-list.component.scss
+++ b/src/app/widgets-list/widgets-list.component.scss
@@ -28,3 +28,11 @@
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.3);
 }
+
+.close-button {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    z-index: 100;
+    cursor: pointer
+}
