--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,30 +1,10 @@
-<div class="dashboard border" #dashboard cdkDropList (cdkDropListDropped)="dropWidget($event)" [cdkDropListData]="widgets"
-    id="dashboard-{{dashboardId()}}" cdkDropListConnectedTo="widgets-list" cdkDropListOrientation="mixed">
+<div class="dashboard border" #dashboard cdkDropList (cdkDropListDropped)="dropWidget($event)"
+    [cdkDropListData]="widgets" id="dashboard-{{dashboardId()}}" cdkDropListConnectedTo="widgets-list"
+    cdkDropListOrientation="mixed">
     @for(widget of widgets(); track widget.id) {
-    <div class="widget border" [style]="editMode() ? 'resize: both' :  'resize: none'" cdkDrag [ngStyle]="widget.config" (cdkDragStarted)="onDragStart($event)"
-        (cdkDragEnded)="onDragEnd($event)" cdkDragBoundary=".dashboard" #widget id="{{widget.id}}" [cdkDragDisabled]="!editMode()">
 
-
-        @if( editMode() ) {
-        <div class="widget-header">
-            <div>
-                <mat-icon class="pointer" (click)="removeWidget(widget.id)">delete</mat-icon>
-            </div>
-            <div class="drag-handle" cdkDragHandle>
-                <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
-                    <path
-                        d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z">
-                    </path>
-                    <path d="M0 0h24v24H0z" fill="none"></path>
-                </svg>
-            </div>
-        </div>
-        }
-
-
-        <div class="widget-content">
-            <app-widget-wrapper [widget]="widget.name" [component]="widget.component"></app-widget-wrapper>
-        </div>
-    </div>
+    <app-widget-wrapper [widget]="widget" [component]="widget.component" [editMode]="editMode()"
+        (remove)="removeWidget($event)">
+    </app-widget-wrapper>
     }
 </div>
