--- a/src/app/components/widget/widget-wrapper.component.scss
+++ b/src/app/components/widget/widget-wrapper.component.scss
@@ -2,3 +2,30 @@
     width: 100%;
     height: 100%;
 }
+
+.widget-header {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.widget-content {
+  height: 100%;
+  width: 100%;
+}
+
+.widget {
+    min-width: 350px;
+    min-height: 260px;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    resize: both;
+    max-width: 100%;
+    margin: 10px;
+    background-color: white;
+    transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+                0 2px 2px 0 rgba(0, 0, 0, 0.14),
+                0 1px 5px 0 rgba(0, 0, 0, 0.12);
+}
