small fixes and exchange rate widget adjustment

--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -1,5 +1,5 @@
 .dashboard {
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-wrap: wrap;
     padding: 10px;
@@ -10,48 +10,8 @@
     background: linear-gradient(to right bottom, #e5e7eb 50%, rgb(229 231 235 / 0) 100%);
 }
 
-.drag-handle {
-    color: #ccc;
-    cursor: move;
-    width: 24px;
-    height: 24px;
-}
-
-.widget {
-    min-width: 350px;
-    min-height: 260px;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-    resize: both;
-    max-width: 100%;
-    margin: 10px;
-    background-color: white;
-    transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
-    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
-                0 2px 2px 0 rgba(0, 0, 0, 0.14),
-                0 1px 5px 0 rgba(0, 0, 0, 0.12);
-}
-
-.widget-header {
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-}
-
-.widget-content {
-  height: 100%;
-  width: 100%;
-}
-
-.widget:active {
-    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-                0 8px 10px 1px rgba(0, 0, 0, 0.14),
-                0 3px 14px 2px rgba(0, 0, 0, 0.12);
-  }
-
-.cdk-drag-placeholder {
-    opacity: 0;
+.pointer {
+  cursor: pointer;
 }
 
 .cdk-drop-list-dragging .cdk-drag {
@@ -61,8 +21,4 @@
 /* Animate an item that has been dropped. */
 .cdk-drag-animating {
   transition: transform 300ms cubic-bezier(0, 0, 0.2, 1);
-}
-
-.pointer {
-  cursor: pointer;
 }
