--- a/src/app/components/widget/widget-wrapper.component.scss
+++ b/src/app/components/widget/widget-wrapper.component.scss
@@ -14,6 +14,13 @@
   width: 100%;
 }
 
+.drag-handle {
+    color: #ccc;
+    cursor: move;
+    width: 24px;
+    height: 24px;
+}
+
 .widget {
     min-width: 350px;
     min-height: 260px;
@@ -28,4 +35,20 @@
     box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
                 0 2px 2px 0 rgba(0, 0, 0, 0.14),
                 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+}
+
+.widget:active {
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+                0 8px 10px 1px rgba(0, 0, 0, 0.14),
+                0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+
+.cdk-drop-list-dragging .cdk-drag {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+/* Animate an item that has been dropped. */
+.cdk-drag-animating {
+  transition: transform 300ms cubic-bezier(0, 0, 0.2, 1);
 }
