--- a/src/app/widgets-list/widgets-list.component.html
+++ b/src/app/widgets-list/widgets-list.component.html
@@ -2,9 +2,12 @@
     <mat-icon class="close-button" (click)="close()">close</mat-icon>
     <div cdkDropList [cdkDropListData]="widgets" id="widget-list" [cdkDropListConnectedTo]="['dashboard-1', 'dashboard-2']"
         cdkDropListSortingDisabled class="list">
-        @for(widget of widgets; track widget) {
+        @for(widget of widgets; track widget.name) {
         <div class="widget" cdkDrag (cdkDragStarted)="onDragStart($event)" (cdkDragEnded)="onDragEnd($event)">
+               <!--
+
                 <ng-container *ngComponentOutlet="widget.component" /> `
+               -->
         </div>
         }
     </div>
