--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,19 @@
     cursor: grabbing;
 }
 
+.pointer {
+    cursor: pointer;
+}
+
 .moving {
     cursor: move;
+}
+
+.scroll {
+    overflow: scroll;
+}
+
+.full {
+    width: 100%;
+    height: 100%;
 }
