add dot to clock

--- a/src/app/components/widgets/clock/clock.component.html
+++ b/src/app/components/widgets/clock/clock.component.html
@@ -1,5 +1,6 @@
 <div class="container full">
     <div class="clock">
+        <div class="dot"></div>
         <span class="hand-s" [ngStyle]="sRotate()"></span>
         <span class="hand-m" [ngStyle]="mRotate()"></span>
         <span class="hand-h" [ngStyle]="hRotate()"></span>
