--- a/src/app/components/widgets/clock/clock.component.scss
+++ b/src/app/components/widgets/clock/clock.component.scss
@@ -20,7 +20,7 @@
     width: 2px;
     position: absolute;
     left: calc(50% - 1px);
-    top: 45px;
+    top: 43px;
     background-color: red;
     transform-origin: 1px 110px;
     z-index: 3
@@ -31,7 +31,7 @@
     width: 4px;
     position: absolute;
     left: calc(50% - 2px);
-    top: 45px;
+    top: 43px;
     background-color: black;
     transform-origin: 2px 110px;
     z-index: 2
@@ -42,9 +42,20 @@
     width: 6px;
     position: absolute;
     left: calc(50% - 3px);
-    top: 55px;
+    top: 53px;
     background-color: black;
     transform-origin: 3px 100px;
+}
+
+.dot {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background-color: black;
+    transform-origin: 3px 100px;
+    top: calc(50% - 2px);
+    left: calc(50% - 5px);
+    border-radius: 50%;
 }
 
 .numbers {
@@ -70,5 +81,9 @@
             top: calc(50% - 10px);
             transform-origin: center;
         }
+    }
+
+    .hour-0 {
+        display: none !important;
     }
 }
