--- a/src/app/components/widget-wrapper/widget-wrapper.component.scss
+++ b/src/app/components/widget-wrapper/widget-wrapper.component.scss
@@ -6,7 +6,7 @@
 .widget-header {
   width: 100%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
 
 .widget-content {
@@ -51,4 +51,10 @@
 /* Animate an item that has been dropped. */
 .cdk-drag-animating {
   transition: transform 300ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.placeholder {
+  background: #ccc;
+  border: dotted 3px #999;
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
