--- a/src/app/components/widgets/clocks/clock/clock.component.html
+++ b/src/app/components/widgets/clocks/clock/clock.component.html
@@ -1,4 +1,4 @@
-<div class="container full">
+<div class="container">
     <div class="clock">
         <div class="dot"></div>
         <span class="hand-s" [ngStyle]="sRotate()"></span>
