--- a/src/app/widgets-list/widgets-list.component.html
+++ b/src/app/widgets-list/widgets-list.component.html
@@ -4,8 +4,8 @@
         cdkDropListSortingDisabled class="list">
         @for(widget of widgets; track widget.name) {
         <div class="widget" cdkDrag (cdkDragStarted)="onDragStart($event)" (cdkDragEnded)="onDragEnd($event)">
-
-                <ng-container *ngComponentOutlet="widget.component" /> 
+            <div class="placeholder" *cdkDragPlaceholder></div>
+            <ng-container *ngComponentOutlet="widget.component" /> 
         </div>
         }
     </div>
