--- a/src/app/widgets-list/widgets-list.component.scss
+++ b/src/app/widgets-list/widgets-list.component.scss
@@ -35,3 +35,11 @@
     z-index: 100;
     cursor: pointer
 }
+
+.placeholder {
+  background: #ccc;
+  border: dotted 3px #999;
+  min-width: 350px;
+  min-height: 265px;
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
