clock widget add ticks

--- a/src/app/components/widgets/clocks/clock/clock.component.html
+++ b/src/app/components/widgets/clocks/clock/clock.component.html
@@ -7,6 +7,7 @@
     </div>
     <div class="numbers">
         @for(hour of hours_template; track hour) {
+            <div class="tick-{{$index}}"></div>
             <div class="hour-{{$index}}">{{hour}}</div>
         }
     </div>
