--- a/src/app/components/widgets/clocks/clocks.component.scss
+++ b/src/app/components/widgets/clocks/clocks.component.scss
@@ -1,8 +1,8 @@
 .container {
     display: flex;
     flex-direction: row;
-    width: fit-content;
-    height: fit-content;
+    align-items: center;
+    justify-content: center;
 }
 
 .clock-container {
