--- a/src/app/widgets-list/widgets-list.component.html
+++ b/src/app/widgets-list/widgets-list.component.html
@@ -4,8 +4,9 @@
         cdkDropListSortingDisabled class="list">
         @for(widget of widgets; track widget.name) {
         <div class="widget" cdkDrag (cdkDragStarted)="onDragStart($event)" (cdkDragEnded)="onDragEnd($event)">
-            <div class="placeholder" *cdkDragPlaceholder></div>
-            <ng-container *ngComponentOutlet="widget.component" /> 
+            <div style="width: 100%; height: 100%; overflow: hidden">
+                <ng-container *ngComponentOutlet="widget.component" /> 
+            </div>
         </div>
         }
     </div>
