--- a/src/app/components/widget-wrapper/widget-wrapper.component.scss
+++ b/src/app/components/widget-wrapper/widget-wrapper.component.scss
@@ -26,7 +26,7 @@
     min-height: 260px;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
+    overflow: auto;
     resize: both;
     max-width: 100%;
     margin: 10px;
