--- a/src/app/components/widgets/clocks/clocks.component.scss
+++ b/src/app/components/widgets/clocks/clocks.component.scss
@@ -3,6 +3,9 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    width: fit-content;
+    height: fit-content;
+    padding: 5px;
 }
 
 .clock-container {
@@ -11,6 +14,7 @@
     align-items: center;
     height: 100%;
     width: 100%;  
+    padding: 10px;
 }
 
 .timezone {
