--- a/src/app/components/widgets/news/news.component.scss
+++ b/src/app/components/widgets/news/news.component.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     gap: 5px;
     padding: 5px;
-    width: 65%;
+    width: 100%;
 }
 
 .news-container {
@@ -12,13 +12,16 @@
     padding: 5px;
 }
 
+
 .loader {
-    border-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
     height: 30px;
 }
 
 .image-loader {
-    border-radius: 10px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
     height: 150px;
     width: 100%;
 }
