--- a/src/app/components/widgets/widget-weather/widget-weather.component.html
+++ b/src/app/components/widgets/widget-weather/widget-weather.component.html
@@ -25,7 +25,7 @@
                     {{temperature()}}&deg;C
                 </div>
             </div>
-            <div style="align-items: flex-start; font-size: 10px">
+            <div class="details">
                 <span>
                     Precipitation: {{details().precipitation}}%
                 </span>
