--- a/src/app/components/widget-wrapper/widget-wrapper.component.scss
+++ b/src/app/components/widget-wrapper/widget-wrapper.component.scss
@@ -7,6 +7,11 @@
   width: 100%;
   display: flex;
   justify-content: flex-start;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 1000;
+  background-color: white;
 }
 
 .widget-content {
@@ -17,15 +22,14 @@
 .drag-handle {
     color: #ccc;
     cursor: move;
-    width: 24px;
-    height: 24px;
 }
 
 .widget {
-    min-width: 350px;
-    min-height: 260px;
+    min-width: 250px;
+    min-height: 170px;
     display: flex;
     flex-direction: column;
+    position: relative;
     overflow: auto;
     resize: both;
     max-width: 100%;
