--- a/src/app/components/widgets/widget-weather/widget-weather.component.scss
+++ b/src/app/components/widgets/widget-weather/widget-weather.component.scss
@@ -10,18 +10,20 @@ $numStarTwoStars: 600;
 $numStarThreeStars: 100;
 
 .container {
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    overflow: hidden;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  overflow: hidden;
+  container-name: main;
+  container-type: inline-size;
 }
 
 .white {
-  color:white !important;
+  color: white !important;
 }
 
 .zzz {
@@ -35,11 +37,11 @@ $numStarThreeStars: 100;
 }
 
 .day-sky {
-   background: linear-gradient(to bottom, #1a1627 0%, hsl(247, 47%, 25%) 100%);
+  background: linear-gradient(to bottom, #1a1627 0%, hsl(247, 47%, 25%) 100%);
 }
 
 .night-sky {
-    background: #87CEEB; 
+  background: #87CEEB;
 }
 
 .rain-day {
@@ -47,92 +49,99 @@ $numStarThreeStars: 100;
 }
 
 .clouds {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-image: url('./assets/cloud.png');
-    animation: animate-cloud 120s infinite;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-image: url('./assets/cloud.png');
+  animation: animate-cloud 120s infinite;
 }
 
 .sun {
-    width: 100px;
-    height: 100px;
-    background: radial-gradient(circle, #FFD700 30%, #ffc700 70%);
-    border-radius: 50%;
-    position: absolute;
-    box-shadow: 0 0 30px 15px rgba(255, 215, 0, 0.8), 
-                0 0 60px 30px rgba(255, 140, 0, 0.6);
-    animation: glow 3s infinite alternate;
-    top: 10px;
+  width: 100px;
+  height: 100px;
+  background: radial-gradient(circle, #FFD700 30%, #ffc700 70%);
+  border-radius: 50%;
+  position: absolute;
+  box-shadow: 0 0 30px 15px rgba(255, 215, 0, 0.8),
+    0 0 60px 30px rgba(255, 140, 0, 0.6);
+  animation: glow 3s infinite alternate;
+  top: 10px;
 }
 
 .moon {
-    width: 150px;
-    height: 150px;
-    background: radial-gradient(circle at 30% 30%, #fff 20%, #ddd 60%, #bbb 100%);
-    border-radius: 50%;
-    box-shadow: 
-      0 0 60px 20px rgba(255, 255, 255, 0.5), /* Glow effect */
-      10px 10px 5px rgba(0, 0, 0, 0.2) inset; /* Inner shadow */
-    position: absolute;
-    top: 10px;
+  width: 150px;
+  height: 150px;
+  background: radial-gradient(circle at 30% 30%, #fff 20%, #ddd 60%, #bbb 100%);
+  border-radius: 50%;
+  box-shadow:
+    0 0 60px 20px rgba(255, 255, 255, 0.5),
+    /* Glow effect */
+    10px 10px 5px rgba(0, 0, 0, 0.2) inset;
+  /* Inner shadow */
+  position: absolute;
+  top: 10px;
 }
 
 @keyframes animStar {
-    from {
-      transform: translateY(0px);
-    }
-    to {
-      transform: translateY(-#{2560}px)
-        translateX(-#{2560}px);
-    }
+  from {
+    transform: translateY(0px);
   }
 
+  to {
+    transform: translateY(-#{2560}px) translateX(-#{2560}px);
+  }
+}
+
 @function create-stars($n) {
-    $stars: "#{random(2560)}px #{random(2560)}px #FFF";
-  
-    @for $i from 2 through $n {
-      $stars: "#{$stars} , #{random(2560)}px #{random(2560)}px #FFF";
-    }
-    @return unquote($stars);
+  $stars: "#{random(2560)}px #{random(2560)}px #FFF";
+
+  @for $i from 2 through $n {
+    $stars: "#{$stars} , #{random(2560)}px #{random(2560)}px #FFF";
+  }
+
+  @return unquote($stars);
 }
 
 .info-container {
-    width: 85%;
-    height: 80%;
-    background: rgba(255, 255, 255, 0.2);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(2px);
-    -webkit-backdrop-filter: blur(5px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    position: relative;
+  width: 85%;
+  height: 80%;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  position: relative;
 
-    align-self: center;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 400;
-    z-index: 3;
-    display: flex;
-    flex-direction: column;
+  align-self: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 400;
+  z-index: 3;
+  display: flex;
+  flex-direction: column;
+  overflow: none;
 
-    container-name: info;
-    container-type: inline-size;
+  container-name: info;
+  container-type: inline-size;
 
-    padding: 10px;
+}
+
+.info-container > * {
+  mix-blend-mode: difference;
 }
 
 .top {
-    width: 100%;
-    height: 28%;
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 120px;
+  width: 100%;
+  height: 28%;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 120px;
 }
 
-.top > * {
+.top>* {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -141,8 +150,8 @@ $numStarThreeStars: 100;
 }
 
 .bottom {
-    width: 100%;
-    height: 70%;
+  width: 100%;
+  height: 70%;
 }
 
 .temperature {
@@ -155,57 +164,61 @@ $numStarThreeStars: 100;
 }
 
 @keyframes glow {
-    0% {
-        box-shadow: 0 0 30px 15px rgba(255, 215, 0, 0.8), 
-                    0 0 60px 30px rgba(255, 140, 0, 0.6);
-        transform: scale(1);
-    }
-    100% {
-        box-shadow: 0 0 50px 25px rgba(255, 215, 0, 1), 
-                    0 0 80px 40px rgba(255, 140, 0, 0.8);
-        transform: scale(1.1);
-    }
+  0% {
+    box-shadow: 0 0 30px 15px rgba(255, 215, 0, 0.8),
+      0 0 60px 30px rgba(255, 140, 0, 0.6);
+    transform: scale(1);
+  }
+
+  100% {
+    box-shadow: 0 0 50px 25px rgba(255, 215, 0, 1),
+      0 0 80px 40px rgba(255, 140, 0, 0.8);
+    transform: scale(1.1);
+  }
 }
 
 @keyframes animate-cloud {
-    0% {
-        background-position: 0px;
-    }
-    100% {
-        background-position: 5440px;
-    }
+  0% {
+    background-position: 0px;
+  }
+
+  100% {
+    background-position: 5440px;
+  }
 }
 
 @mixin star-template($numStars, $starSize, $scrollSpeed) {
-    z-index: 1;
+  z-index: 1;
+  width: $starSize;
+  height: $starSize;
+  border-radius: 50%;
+  background: transparent;
+  box-shadow: create-stars($numStars);
+  animation: animStar $scrollSpeed linear infinite;
+
+  &:after {
+    content: " ";
+    top: -$starStartOffset;
     width: $starSize;
     height: $starSize;
     border-radius: 50%;
+    position: absolute;
     background: transparent;
     box-shadow: create-stars($numStars);
-    animation: animStar $scrollSpeed linear infinite;
-    &:after {
-      content: " ";
-      top: -$starStartOffset;
-      width: $starSize;
-      height: $starSize;
-      border-radius: 50%;
-      position: absolute;
-      background: transparent;
-      box-shadow: create-stars($numStars);
-    }
   }
+}
 
-  .stars {
-    @include star-template($numStarOneStars, 1px, $starOneScrollDuration);
-  }
+.stars {
+  @include star-template($numStarOneStars, 1px, $starOneScrollDuration);
+}
 
-  .stars2 {
-    @include star-template($numStarTwoStars, 2px, $starTwoScrollDuration);
-  }
-  .stars3 {
-    @include star-template($numStarThreeStars, 3px, $starThreeScrollDuration);
-  }
+.stars2 {
+  @include star-template($numStarTwoStars, 2px, $starTwoScrollDuration);
+}
+
+.stars3 {
+  @include star-template($numStarThreeStars, 3px, $starThreeScrollDuration);
+}
 
 .chart-container {
   position: relative;
@@ -256,18 +269,22 @@ img {
   height: 80%;
 }
 
+.details {
+  align-items: flex-start;
+  font-size: 10px
+}
 
 
 @container info (min-width: 450px) {
-  
-.top {
-  gap: 150px;
-}
 
-  div > * {
+  .top {
+    gap: 150px;
+  }
+
+  div>* {
     font-size: 12px;
   }
-  
+
   div.temperature {
     font-size: 2.5rem;
   }
@@ -277,14 +294,7 @@ img {
   }
 }
 
-
-@container info (min-width: 650px) {
-  .top {
-    gap: 400px;
-  }
-}
-
-@container info (width < 350px) {
+@container info (width < 400px) {
   .bottom {
     display: none
   }
@@ -297,16 +307,28 @@ img {
     gap: 10px;
   }
 
-  div > * {
+  div>* {
     font-size: 18px;
   }
-  
+
   div.temperature {
     font-size: 3.5rem;
   }
 
   div.daily {
     font-size: 18px;
+  }
+
+  @container info (width < 250px) {
+    div.top > .details {
+      display: none
+    }
+  }
+}
+
+@container info (min-width: 650px) {
+  .top {
+    gap: 400px;
   }
 }
 
@@ -319,22 +341,43 @@ img {
 }
 
 .loader {
-    height: 50px;
-    aspect-ratio: 1;
-    background-color: #8d847f;
-    border-radius: 50%;
-    animation: l4 3s infinite;
-    position: absolute;
-    top: 40%;
-    left:45%;
-    z-index: 100;
+  height: 50px;
+  aspect-ratio: 1;
+  background-color: #8d847f;
+  border-radius: 50%;
+  animation: l4 3s infinite;
+  position: absolute;
+  top: 40%;
+  left: 45%;
+  z-index: 100;
 }
+
 @keyframes l4 {
-  12.5% {background-image:radial-gradient(80% 65% at left, #0000 94%,#fff9)}
-  25%   {background-image:linear-gradient(90deg,#0000 50%,#fff9 0)}
-  37.5% {background-image:radial-gradient(80% 65% at right,#fff9 94%,#0000)}
-  50%   {background-image:linear-gradient(#fff9 0 0)}
-  62.5% {background-image:radial-gradient(80% 65% at left, #fff9 94%,#0000)}
-  75%   {background-image:linear-gradient(-90deg,#0000 50%,#fff9 0)}
-  87.5% {background-image:radial-gradient(80% 65% at right,#0000 94%,#fff9)}
+  12.5% {
+    background-image: radial-gradient(80% 65% at left, #0000 94%, #fff9)
+  }
+
+  25% {
+    background-image: linear-gradient(90deg, #0000 50%, #fff9 0)
+  }
+
+  37.5% {
+    background-image: radial-gradient(80% 65% at right, #fff9 94%, #0000)
+  }
+
+  50% {
+    background-image: linear-gradient(#fff9 0 0)
+  }
+
+  62.5% {
+    background-image: radial-gradient(80% 65% at left, #fff9 94%, #0000)
+  }
+
+  75% {
+    background-image: linear-gradient(-90deg, #0000 50%, #fff9 0)
+  }
+
+  87.5% {
+    background-image: radial-gradient(80% 65% at right, #0000 94%, #fff9)
+  }
 }
