chart fixes, refactor

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <app-dashboard dashboardId="1"></app-dashboard>
   </mat-tab>
   <mat-tab label="Second">
-    <app-dashboard dashboardId="2"></app-dashboard>
+    <!-- <app-dashboard dashboardId="2"></app-dashboard> -->
   </mat-tab>
 </mat-tab-group>
   @if( editMode() ) {
