--- a/src/app/components/widgets/widget-weather/widget-weather.component.html
+++ b/src/app/components/widgets/widget-weather/widget-weather.component.html
@@ -39,7 +39,7 @@
         </div>
         <div class="bottom">
             <div class="chart-container">
-                <canvas id="{{canvasId}}"></canvas>
+                <canvas #chart></canvas>
             </div>
             <div class="daily-container">
                 @for( day of dailyTempretures; track day) {
