more tests, add canvas mock

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
 </mat-tab-group>
   @if( editMode() ) {
   <div #widgetsList class="widgets-list">
-    <app-widgets-list></app-widgets-list>
+    <app-widgets-list data-testid="widgets-list"></app-widgets-list>
   </div>
   }
 </div>
