test, set changeDetection strategy to onPush

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,9 @@
   <mat-tab label="First"> 
     <app-dashboard dashboardId="1"></app-dashboard>
   </mat-tab>
-  <mat-tab label="Second">
-    <!-- <app-dashboard dashboardId="2"></app-dashboard> -->
-  </mat-tab>
+  <!-- <mat-tab label="Second">
+    <app-dashboard dashboardId="2"></app-dashboard>
+  </mat-tab> -->
 </mat-tab-group>
   @if( editMode() ) {
   <div #widgetsList class="widgets-list">
